# slides.elijahcaine.me

./: .gitignore  CNAME  console.html  crypto_scale_2018.html  foss-thing_osu-lug_2015.html  genindex.html  gh-build.sh  gnu-linux-history_osu-lug_2015.html  history-of-man_osu-lug_2015.html  holy-wars_osu-lug_2014.html  how-to-git_seagl_2016.html  how-to-write-an-email_beaver-barcamp_2015.html  how-to-write-an-email_write-the-docs-eu_2015.html  hurandom_beaver-barcamp_2015.html  index.html  intro-to-kubernetes_beaver-barcamp_2017.html  introduction-to-blender_scale_2015.html  local-build.sh  local-server.sh  objects.inv  pyproject.toml  requirements.txt  seagl-2020.html  search.html  searchindex.js  turing_osu_2013.html
.doctrees/: crypto_scale_2018.doctree  environment.pickle  foss-thing_osu-lug_2015.doctree  gnu-linux-history_osu-lug_2015.doctree  history-of-man_osu-lug_2015.doctree  holy-wars_osu-lug_2014.doctree  how-to-git_seagl_2016.doctree  how-to-write-an-email_beaver-barcamp_2015.doctree  how-to-write-an-email_write-the-docs-eu_2015.doctree  hurandom_beaver-barcamp_2015.doctree  index.doctree  intro-to-kubernetes_beaver-barcamp_2017.doctree  introduction-to-blender_scale_2015.doctree  seagl-2020.doctree  turing_osu_2013.doctree
crypto/: index.html
misc/: crypto.plot.py
source/: conf.py  crypto_scale_2018.rst  holy-wars_osu-lug_2014.rst  how-to-git_seagl_2016.rst  how-to-write-an-email_beaver-barcamp_2015.rst  how-to-write-an-email_write-the-docs-eu_2015.rst  index.rst  intro-to-kubernetes_beaver-barcamp_2017.rst  introduction-to-blender_scale_2015.rst  (+2 more)
(+17 files in other folders)
