[tool.poetry]
name = "slides.elijahcaine.me"
version = "0.1.0"
description = "All my slides for all my talks"
authors = ["Elijah Voigt <elijah.caine.mv@gmail.com>"]
license = "CC-BY-1.0"

[tool.poetry.dependencies]
python = "^3.8"
hieroglyph = "*"
sphinx = "1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
